<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrzelicznikActivity">

    <Spinner
        android:id="@+id/fromCurrId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:dropDownWidth="60dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/outputCounterId"
        app:layout_constraintEnd_toStartOf="@+id/toCounterId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberId" />

    <TextView
        android:id="@+id/counterTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/counter_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/toCurrId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:dropDownWidth="60dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/outputCounterId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toCounterId"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberId" />

    <TextView
        android:id="@+id/toCounterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="230dp"
        android:text="@string/to_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/outputCounterId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberId"
        app:layout_constraintVertical_bias="0.501" />

    <EditText
        android:id="@+id/inputNumberId"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:autofillHints="100"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterTextViewId"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/countButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_text"
        app:backgroundTint="@color/start_buttons_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterTextViewId"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/outputCounterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countButtonId"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/errorCounterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/inputNumberId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterTextViewId"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/resultCounterId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/empty_string"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countButtonId" />
</androidx.constraintlayout.widget.ConstraintLayout>